--- a/deepexi-dubbo-provider/pom.xml
+++ b/deepexi-dubbo-provider/pom.xml
@@ -46,6 +46,10 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/x
             <artifactId>spring-boot-starter-web</artifactId>
       </dependency>
       <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+      </dependency>
+      <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>dubbo-registry-nacos</artifactId>
             <version>0.0.2</version>
