--- a/deepexi-dubbo-provider/src/main/resources/application-local.yml
+++ b/deepexi-dubbo-provider/src/main/resources/application-local.yml
@@ -1,4 +1,9 @@
 spring:
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
   dubbo:
     registry:
       address: 'nacos://127.0.0.1:8848'
